# fastapi-scaffold-backend

./: .drone.yml  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  alembic.sh  duku.json  main.py  project-name.txt  pyproject.toml  pytest.ini  request_body.py  requirements.txt
alembic/: env.py
alembic/versions/: d379247f2097_upgrade.py  eaf01db96f72_first_migrations.py
app/: __init__.py  init_db.py
app/api/: __init__.py  deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: db.py  (+10 more)
app/core/: __init__.py  config.py  security.py
app/crud/: __init__.py  base.py  crud_auth.py  crud_project.py  crud_role.py  crud_role_auth_rels.py  crud_user.py
app/db/: __init__.py  base.py  base_class.py  session.py
app/generate/: __init__.py  mako_render.py
app/mako_scripts/: .drone.yml.mako  .gitignore.mako  Dockerfile.mako  __init__.py  api.mako  core.mako  crud.mako  model.mako  schema.mako
app/mako_scripts/api/: deps.mako
app/mako_scripts/core/: config.mako
app/mako_scripts/db/: session.mako
app/mako_scripts/models/: __init__.mako  auth.mako  role.mako  role_auth_rels.mako  user.mako
app/mako_scripts/schemas/: __init__.mako  auth.mako  role.mako  role_auth_rels.mako  token.mako  user.mako
app/mako_scripts/utils/: security.mako
app/models/: __init__.py  auth.py  generate.py  project.py  role.py  role_auth_rels.py  user.py
app/schemas/: __init__.py  auth.py  base.py  base_param.py  file_param.py  generate_api.py  generate_crud.py  generate_model.py  generate_project.py  generate_schema.py  generators.py  role.py  role_auth_rels.py  schema_base_param.py  schema_generate_api.py  schema_generate_crud.py  schema_generate_model.py  schema_generate_schema.py  token.py  user.py
app/schemas/generate_project/: __init__.py  api.py  config_files.py  core.py  crud.py  db.py  dockerfile.py  drone_yml.py  gitignore.py  models.py  project.py  schemas.py  tests.py  utils.py  version_txt.py
app/statics/: __init__.py  mako_schema_country_purchase.json
app/statics/json/: mako_crud.json  mako_crud_extend_file.json  mako_crud_group_purchase.json  mako_crud_land.json  mako_model.json  mako_model_country_purchase.json  mako_model_extend_file.json  mako_model_group_purchase.json  mako_model_land.json  mako_schema.json  mako_schema_country_purchase.json  mako_schema_extend_file.json  mako_schema_group_purchase.json  mako_schema_land.json
app/tests/: __init__.py  conftest.py
app/tests/api/: test_auth.py  test_crud.py  test_login.py  test_models.py  test_project.py  test_role.py  test_users.py
app/tests/generate/: __init__.py
app/tests/test_crud/: test_auth.py  test_project.py  test_role.py  test_role_auth_rels.py  test_user.py  tset_role_auth_rels.py
app/utils/: __init__.py  security.py
scripts/: init_db.py
test_demo/: is_leap_year.py  test_allure.py  test_class.py  test_example.py  test_multi_asset.py  test_multi_params.py  test_order.py  test_process.py  test_retry.py  test_single_param.py  test_years.py
test_demo/web_test_py/: conftest.py
test_demo/web_test_py/soso/: conftest.py  test_1_soso.py
test_demo/web_test_py/wordpress/: conftest.py  test_2_wordpress.py
(+149 files in other folders)
