[tool.poetry]
name = "generate-fastapi-be"
version = "0.1.0"
description = ""
authors = ["adcoder <17647309108@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"f
python-jose = "^3.3.0"
loguru = "^0.7.2"
mako = "^1.3.3"
alembic = "^1.13.1"
passlib = "^1.7.4"
bcrypt = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
